--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-被你发现了~
+
+<section id="page-start">
+    <canvas id="bgCanvas"></canvas>
+</section>
+
+<script src="jquery.min.js"></script>
+<script src="js.js"></script>
 </body>
 </html>
